--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-python@v2
 
       - name: Pip Packages
-        run: pip install -U mypt setuptools wheel
+        run: pip install -U mypy setuptools wheel
 
       - name: Lint
         run: ./lint.sh
