--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
   mypy:
     strategy:
       matrix:
-        python_ver: [3.7, 3.8, 3.9]
+        python_ver: [3.8, 3.9]
     
     runs-on: ubuntu-latest
 
@@ -30,6 +30,10 @@ jobs:
         run: ./lint.sh
 
   tests:
+    strategy:
+      matrix:
+        python_ver: [3.8, 3.9]
+    
     runs-on: ubuntu-latest
 
     steps:
@@ -38,6 +42,8 @@ jobs:
 
       - name: Setup Python
         uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python_ver }}
 
       - name: Test
         run: ./test.py
