--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,13 @@ on:
 
 jobs:
   mypy:
+    strategy:
+      matrix:
+        python_ver:
+          - 3.8
+          - 3.9
+          - 3.8.2
+
     runs-on: ubuntu-latest
 
     steps:
@@ -16,6 +23,8 @@ jobs:
 
       - name: Setup Python
         uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python_ver }}
 
       - name: Pip Packages
         run: pip install -U mypy
@@ -24,6 +33,13 @@ jobs:
         run: ./lint.sh
 
   tests:
+    strategy:
+      matrix:
+        python_ver:
+          - 3.8
+          - 3.9
+          - 3.8.2
+
     runs-on: ubuntu-latest
 
     steps:
@@ -32,6 +48,8 @@ jobs:
 
       - name: Setup Python
         uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python_ver }}
 
       - name: Test
         run: ./test.py
